# benchmORk

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
app/: __init__.py  main.py  test_display.py
app/components/: __init__.py
app/pages/: __init__.py
benchmork/: __init__.py  cli.py  config.py  instances.py  progress.py  runner.py  types.py  validate.py
benchmork/problems/: __init__.py  base.py  combinatorial.py  graph.py  linear.py  timetabling.py
benchmork/reporting/: __init__.py
configs/: solvers.yaml
solvers/: __init__.py  base.py  networkx_solver.py  ortools_solver.py  pulp_solver.py  pyomo_solver.py  scipy_solver.py  solvor_metaheuristics.py  solvor_solver.py
tests/: __init__.py
